Bug 972817 - Enable type inference unconditionally, r=jandem.